Changelog
=========

6.0-dev - (unreleased)
----------------------
* Bug fix: Corrected errors in code.
* Bug Fix: Removed the possibility to edit relations for translated objects.
  [prospchr refs #9569]
* Upgrade step: Need to run the script that remove the relations
  on translated objects:
  - Check that the back-up has been done :-)
  - In the ZMI, go to 0maintenance
  - Add an External Method, call it clean_relations_of_translated_items
    Module name: Products.EEAPloneAdmin.clean_relations_of_translated_items
    Function Name: clean_relations
  - Run it

5.9 - (2013-01-28)
------------------
* Change: removed the munin chart from the cms activity portlet,
  since the munin plugin is disabled.
  [demarant]
* Bug fix: fix unauthorised to access Title in portlet cms activity 
  for Authenticated role (when eionet users doing comments in IMS).
  [demarant refs #9512]
* Bug Fix: Fixed Relations for multilingual objects. Now, when 
  opening a translated content, the relation widget reflects the
  relations on the Canonical object (EN).
  [prospchr refs #9569]

5.8 - (2013-01-15)
------------------
* Feature: Added portlet to monitor content updates activity.
  [demarant fixes #9512]
* Feature: Better user feedback when sending newsletters.
  Added portlet to show emails queue status via munin.
  [demarant fixes #10268]
* Change: speedup. do not show workflow emails adresses in state > advanced.
  [demarant refs #9985] 
* Bug fix: return auto relations in reverse order from newest to oldest
  [ichimdav #9272]
* Upgrade step: on instances other than production go to www/portal_types/Article:
   - Add 'Folder' in the list of allowed contenttypes
   - This step has already been applied on production
* Change: Added Folders to allowed content types for Article
  [ichimdav #9255]
* Bug fix: Disable award notice value when CallForTender object is created in
  portal_factory
  [ichimdav #10204]

5.7 - (2012-11-29)
------------------